--- a/package.json
+++ b/package.json
@@ -17,30 +17,30 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@emailjs/browser": "^3.9.1",
-    "@iconify/react": "^3.1.3",
-    "@next/eslint-plugin-next": "11.1.3-canary.7",
+    "@emailjs/browser": "^4.4.1",
+    "@iconify/react": "^6.0.2",
     "bootstrap": "^5.0.2",
     "classnames": "^2.3.1",
     "headroom.js": "^0.12.0",
-    "next": "15.4.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^16.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-easy-emoji": "^1.8.1",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
-    "reactstrap": "^8.9.0",
-    "sharp": "^0.31.3"
+    "reactstrap": "^9.2.3",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^16.0.1",
     "@types/headroom.js": "^0.12.2",
-    "@types/node": "^18.14.1",
-    "@types/react": "^18.0.28",
+    "@types/node": "^24.10.0",
+    "@types/react": "^19.2.2",
     "@types/react-lottie": "^1.2.6",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "eslint-config-prettier": "^8.6.0",
-    "prettier": "2.8.4",
-    "typescript": "^4.9.5"
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.3"
   }
 }
