Refactor email sending functionality to use server-side API and update EmailJS configuration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-NEXT_PUBLIC_EMAILJS_SERVICE_ID=your_service_id_here
-NEXT_PUBLIC_EMAILJS_TEMPLATE_ID=your_template_id_here
+# EmailJS Configuration
+# Get these from https://dashboard.emailjs.com/
+# All email sending is handled server-side via /api/send-email
+
+# Private credentials (SECRET - server only)
+NEXT_PRIVATE_EMAILJS_SERVICE_ID=your_service_id_here
+NEXT_PRIVATE_EMAILJS_TEMPLATE_ID=your_template_id_here
+NEXT_PRIVATE_EMAILJS_PRIVATE_KEY=your_private_key_here
+
+# Public key (required by EmailJS, safe to expose)
 NEXT_PUBLIC_EMAILJS_PUBLIC_KEY=your_public_key_here
