--- a/package.json
+++ b/package.json
@@ -17,10 +17,21 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@assistant-ui/react": "^0.11.37",
+    "@assistant-ui/react-markdown": "^0.11.4",
+    "@assistant-ui/styles": "^0.2.8",
     "@iconify/react": "^6.0.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "bootstrap": "^5.0.2",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.3.1",
+    "clsx": "^2.1.1",
     "headroom.js": "^0.12.0",
+    "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "next": "^16.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,7 +39,9 @@
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "reactstrap": "^9.2.3",
-    "sharp": "^0.34.5"
+    "remark-gfm": "^4.0.1",
+    "sharp": "^0.34.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^16.0.1",
